# Physically-Constrained-Pose-Tracking

./: .gitignore  MANIFEST.in  Makefile  README.md  create_manifest.py  pcpose_demo.ipynb  pyproject.toml  requirements.txt  run_pose_model_on_clips.py  setup.cfg  train.py  train_detector.py  train_position.py
data/: manifest_test.csv  manifest_test.json  manifest_train.csv  manifest_train.json  manifest_val.csv  manifest_val.json
datasets/marble/: marble-on-track-info-sim-1.npy  marble-on-track-info-sim-10.npy  marble-on-track-info-sim-11.npy  marble-on-track-info-sim-12.npy  marble-on-track-info-sim-14.npy  marble-on-track-info-sim-15.npy  marble-on-track-info-sim-5.npy  marble-on-track-info-sim-9.npy
datasets/marble/train/: marble-on-track-info-sim-2.npy  marble-on-track-info-sim-3.npy  marble-on-track-info-sim-4.npy  marble-on-track-info-sim-6.npy  marble-on-track-info-sim-7.npy  marble-on-track-info-sim-8.npy
datasets/pendulum/: pendulum-info-sim-10.npy  pendulum-info-sim-12.npy  pendulum-info-sim-13.npy  pendulum-info-sim-14.npy  pendulum-info-sim-15.npy  pendulum-info-sim-2.npy  pendulum-info-sim-4.npy  pendulum-info-sim-7.npy
pcpose/: __init__.py  config.py  data.py  data_video_dataset.py  engine.py  filtering.py  losses.py  physics.py  pipeline.py  viz.py
pcpose/data/: detector_dataset.py  position_dataset.py  preprocess.py  utils.py
pcpose/models/: backbone.py  detector.py  physics_layers.py  pose_model.py  pose_temporal.py  position_head.py  two_stage_backbone.py
tools/: gen_manifest.py  visualize_ekf_vs_raw.py  viz_one_sim.py
(+8 files in other folders)
